# lttng-ust

./: .gitignore  Makefile.am  configure.ac
doc/man/: lttng-ust.3
include/: Makefile.am  ust-comm.h
include/lttng/: tracepoint.h  ust-ctl.h  ust-events.h  ust-tracepoint-event-nowrite.h  ust-tracepoint-event-reset.h  ust-tracepoint-event-write.h  ust-tracepoint-event.h
liblttng-ust/: lttng-events.c
liblttng-ust-comm/: lttng-ust-comm.c
liblttng-ust-ctl/: ustctl.c
liblttng-ust-sampling/: Makefile.am  README  run  sampling.c  sampling_tp.h
tests/: Makefile.am
tests/ctf-dynseq/: Makefile.am  README  dynseq.c  dynseq.h  tp.h
tests/ctf-global-types/: Makefile.am  README  ctf-global-types.c  tp.c  ust_tests_ctf_global_types.h
